# dcc-materialx

./: README.md  pyproject.toml
skill/materialx-lookdev/: SKILL.md  runtimes.yaml  tools.yaml
skill/materialx-lookdev/scripts/: _materialx.py  create_standard_surface.py  inspect_document.py  validate_document.py
tests/: test_materialx.py
