[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dcc-materialx"
version = "0.1.0"
description = "MaterialX look-development skills for DCC-MCP"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["MaterialX>=1.38", "dcc-mcp-core>=0.19"]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

